--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,22 +15,18 @@ group=Group
 organization=Organization
 logout_successfully=Logout successful
 your_password_updated=Your password was updated sucessfully!
-user_exists_in_org= User already exists in the organization!
 organization_invite=Organization invite
-invite_exists=Invite already exists!
 group_or_user_or_role=Group or User or Role
-group_exists=A Group with the same name already exists!
 role=Role
 invite=Invite
-admin-role-error=Admin role cannot be modified!
 folder=Folder
 entry=Entry
-only_root=Only folders within organizations directly inside the root folder can be changed!
-permission-aspect=Only use permission aspect on methods with organizationId argument
-permission-error=You don't have permission to access this!
-duplicate-folder-name=A folder with the same name already exists in this folder!
 
 # Errors
+user_exists_in_org= User already exists in the organization!
+invite_exists=Invite already exists!
+admin-role-error=Admin role cannot be modified!
+group_exists=A Group with the same name already exists!
 server_error=Server error
 method_not_supported=Method not supported
 malformed_json_request=Malformed JSON request
@@ -39,6 +35,11 @@ role_not_found=Role not found
 bad_credentials=Bad credentials
 access_denied=Access denied
 same_password_error=New password cannot be the same as the old password
+invalid-extension=Extension is invalid!
+only_root=Only folders within organizations directly inside the root folder can be changed!
+permission-aspect=Only use permission aspect on methods with organizationId argument
+permission-error=You don't have permission to access this!
+duplicate-folder-name=A folder with the same name already exists in this folder!
 
 # Validation errors
 in_list=Must be in: {list}
