--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,6 +21,7 @@ role=Role
 invite=Invite
 folder=Folder
 entry=Entry
+create_or_accept=Create an account using this email / Login and accept the invitation!
 
 # Errors
 user_exists_in_org= User already exists in the organization!
@@ -36,7 +37,7 @@ bad_credentials=Bad credentials
 access_denied=Access denied
 same_password_error=New password cannot be the same as the old password
 invalid-extension=Extension is invalid!
-only_root=Only folders within organizations directly inside the root folder can be changed!
+only_organization_root=Only folders within organizations directly inside the root folder can be changed!
 permission-aspect=Only use permission aspect on methods with organizationId argument
 permission-error=You don't have permission to access this!
 duplicate-folder-name=A folder with the same name already exists in this folder!
